hosted on gh pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
 <div class="header-container">
   <div class="head-left">
     <div class="logo-wrap">
-      <img src="../assets/DesignImage/logo.png" alt="">
+      <img src="./assets/DesignImage/logo.png" alt="">
     </div>
   </div>
   <div class="head-right">
